Responsive and little changes design

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="common-info_text">When the voting platform is open you would be able to vote for your favourite streamers and keep track of the leaderboards in the run up to the weekend.</p>
                 </div>
                 <div class="common-last_winner">
-                    <h3 class="common-last_winner_title">Promoted streamer.</h3>
+                    <h3 class="common-last_winner_title">Promoted streamer</h3>
                     <a class="common-last_winner_link" href="">
                         <div class="common-last_winner_img">
                             <img src="./media/MauiCreative_Logo.png" alt="">
@@ -86,15 +86,15 @@
             </div>
             <div class="submit_section-div">
                 <form id="submit_streamer_form">
-                    <h2>Streamer's Name</h2>
-                    <input id="streamer_name" type="text" placeholder="Enter Streamer's Name" required>
-                    <h2>Twitch</h2>
-                    <input id="twitch_url" type="text" placeholder="Enter twitch url" required pattern="https://(www.)?twitch.com/.+">
-                    <h2>Streamer's Social Links</h2>
-                    <input id="youtube_url" type="text" placeholder="(Enter youtube url here)">
-                    <input id="twitter_url" type="text" placeholder="(Enter twitter url here)">
-                    <button type="button" value="Submit!" onclick="submit_streamer()" id="submit_vote_button">Submit!</button>
-                    <div class="loader" id="wait_loader"></div>
+                    <h2 class="submit_streamer_form_item">Streamer's Name</h2>
+                    <input class="submit_streamer_form_item" id="streamer_name" type="text" placeholder="Enter Streamer's Name" required>
+                    <h2 class="submit_streamer_form_item" >Twitch</h2>
+                    <input class="submit_streamer_form_item" id="twitch_url" type="text" placeholder="Enter twitch url" required pattern="https://(www.)?twitch.com/.+">
+                    <h2 class="submit_streamer_form_item" >Streamer's Social Links</h2>
+                    <input class="submit_streamer_form_item" id="youtube_url" type="text" placeholder="(Enter youtube url here)">
+                    <input class="submit_streamer_form_item" id="twitter_url" type="text" placeholder="(Enter twitter url here)">
+                    <button class="submit_streamer_form_item" type="button" value="Submit!" onclick="submit_streamer()" id="submit_vote_button">Submit!</button>
+                    <div class="loader submit_streamer_form_item" id="wait_loader"></div>
                 </form>
                 <div class="common-countdown"></div>
             </div>
@@ -117,7 +117,7 @@
                   <div class="common-last_winner_img">
                       <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div id="last_winner_name"><p>Miquelonis6969</p></div>
+                  <div id="last_winner_name"><p>Miquelonis22</p></div>
                   <div class="common-last_winner_external_link">
                       <img class="invert" src="./media/External_link_font_awesome.svg.png" alt="">
                   </div>
@@ -143,7 +143,7 @@
                   <div class="vote_section-leaderboard_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
                     <button><i class="fas fa-plus"></i></button>
                   </div>
@@ -156,7 +156,7 @@
                   <div class="vote_section-leaderboard_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
                     <button><i class="fas fa-plus"></i></button>
                   </div>
@@ -169,7 +169,7 @@
                   <div class="vote_section-leaderboard_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
                     <button><i class="fas fa-plus"></i></button>
                   </div>
@@ -182,7 +182,7 @@
                   <div class="vote_section-leaderboard_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
                     <button><i class="fas fa-plus"></i></button>
                   </div>
@@ -195,7 +195,7 @@
                   <div class="vote_section-leaderboard_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
                     <button><i class="fas fa-plus"></i></button>
                   </div>
@@ -209,7 +209,7 @@
                   <div class="vote_section-list_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
                     <button><i class="fas fa-plus invert"></i></button>
                   </div>
@@ -219,7 +219,7 @@
                   <div class="vote_section-list_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
                     <button><i class="fas fa-plus invert"></i></button>
                   </div>
@@ -229,7 +229,7 @@
                   <div class="vote_section-list_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
                     <button><i class="fas fa-plus invert"></i></button>
                   </div>
@@ -239,7 +239,7 @@
                   <div class="vote_section-list_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
                     <button><i class="fas fa-plus invert"></i></button>
                   </div>
@@ -249,7 +249,7 @@
                   <div class="vote_section-list_tag_streamer_img">
                     <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
                     <button><i class="fas fa-plus invert"></i></button>
                   </div>
