--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <nav class="nav_bar">
             <a class="nav_bar-a" target="_blank" rel="voting_platform" id="Nav_mainSite" href="https://streamraids.net"><span>Main Site</span></a>
             <a class="nav_bar-a" href="#" onclick="enable_submissions()"><span>Submit streamer</span></a>
+            <a class="nav_bar-a" href="#" onclick="enable_voting()"><span>Vote</span></a>
         </nav>
         <div class="wallet_div">
           <div class="wallet_div-metamask">
@@ -99,8 +100,6 @@
                 <div class="common-countdown"></div>
             </div>
         </div>
-
-        <div id="snackbar">some message</div>
     </section>
 
     <section id="vote_section" style="display:none">
@@ -108,24 +107,25 @@
         <div class="vote_section-container">
           <div class="common-div">
             <div class="common-info">
-                <h3 class="common-info_title">Lorem ipsum dolor sit amet.</h3>
-                <p class="common-info_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus non quos beatae sed sunt unde voluptatem reiciendis recusandae esse provident quas, consequatur repudiandae dolores fugit id eos! Praesentium ut maiores consectetur sapiente dolore quia impedit harum et dolores tempora voluptates reprehenderit, cum id recusandae inventore ipsam odit iusto veritatis itaque totam ratione in maxime dolorem quas? Accusamus similique ipsum non voluptas blanditiis, vel temporibus necessitatibus quam quasi quo modi quisquam excepturi reprehenderit? Consectetur veritatis magnam nam, nemo quidem consequuntur perspiciatis accusamus sit ex. Delectus, totam incidunt harum asperiores odio obcaecati quam dolores libero ullam, earum minima cum atque quasi dolor.</p>
+                <h3 class="common-info_title">Welcome to the Voting Platform!</h3>
+                <p class="common-info_text">The voting system starts with the entry phase, allowing you to put forward your favourite streamers for the dev team to process into voting.</p>
+                <p class="common-info_text">When the voting platform is open you would be able to vote for your favourite streamers and keep track of the leaderboards in the run up to the weekend.</p>
             </div>
             <div class="common-last_winner">
-                <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
+                <h3 class="common-last_winner_title">Promoted streamer.</h3>
                 <a class="common-last_winner_link" href="">
-                  <div class="common-last_winner_img">
-                      <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div id="last_winner_name"><p>Miquelonis22</p></div>
-                  <div class="common-last_winner_external_link">
+                    <div class="common-last_winner_img">
+                        <img src="./media/MauiCreative_Logo.png" alt="">
+                    </div>
+                    <div id="last_winner_name"><p>MAUI CRTV</p></div>
+                    <div class="common-last_winner_external_link">
                       <img class="invert" src="./media/External_link_font_awesome.svg.png" alt="">
-                  </div>
+                    </div>
                 </a>
                 <div class="common-last_winner_socials">
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
+                    <a class="common-last_winner_socials_img" href="https://www.twitch.tv/mauicrtv" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
+                    <a class="common-last_winner_socials_img" href="https://www.youtube.com/mauicrtv" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
+                    <a class="common-last_winner_socials_img" href="https://twitter.com/mauicrtv" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
                 </div>
             </div>
         </div>
@@ -135,126 +135,14 @@
             <input id="search_streamer" placeholder="Search by streamers name..." type="text">
           </div>
           <div class="vote_section-main">
-            <div class="vote_section-leaderboard">
+            <div class="vote_section-leaderboard" id="leaderboard_div">
               <h2 class="vote_section-leaderboard_title">Voting Leaderboard</h2>
-              <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
-                <div class="vote_section-leaderboard_tag_streamer">
-                  <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-leaderboard_tag_streamer_plus">
-                    <button><i class="fas fa-plus"></i></button>
-                  </div>
-                </div>
-              </div>
-              <!--  -->
-              <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
-                <div class="vote_section-leaderboard_tag_streamer">
-                  <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-leaderboard_tag_streamer_plus">
-                    <button><i class="fas fa-plus"></i></button>
-                  </div>
-                </div>
-              </div>
-              <!--  -->
-              <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
-                <div class="vote_section-leaderboard_tag_streamer">
-                  <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-leaderboard_tag_streamer_plus">
-                    <button><i class="fas fa-plus"></i></button>
-                  </div>
-                </div>
-              </div>
-              <!--  -->
-              <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
-                <div class="vote_section-leaderboard_tag_streamer">
-                  <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-leaderboard_tag_streamer_plus">
-                    <button><i class="fas fa-plus"></i></button>
-                  </div>
-                </div>
-              </div>
-              <!--  -->
-              <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
-                <div class="vote_section-leaderboard_tag_streamer">
-                  <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-leaderboard_tag_streamer_plus">
-                    <button><i class="fas fa-plus"></i></button>
-                  </div>
-                </div>
-              </div>
+
               <!--  -->
             </div>
             <div class="vote_section-list">
-              <div class="vote_section-list_overflow">
-                <div class="vote_section-list_tag_streamer">
-                  <div class="vote_section-list_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-list_tag_streamer_plus">
-                    <button><i class="fas fa-plus invert"></i></button>
-                  </div>
-                </div>
-                <!--  -->
-                <div class="vote_section-list_tag_streamer">
-                  <div class="vote_section-list_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-list_tag_streamer_plus">
-                    <button><i class="fas fa-plus invert"></i></button>
-                  </div>
-                </div>
-                <!--  -->
-                <div class="vote_section-list_tag_streamer">
-                  <div class="vote_section-list_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-list_tag_streamer_plus">
-                    <button><i class="fas fa-plus invert"></i></button>
-                  </div>
-                </div>
-                <!--  -->
-                <div class="vote_section-list_tag_streamer">
-                  <div class="vote_section-list_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-list_tag_streamer_plus">
-                    <button><i class="fas fa-plus invert"></i></button>
-                  </div>
-                </div>
-                <!--  -->
-                <div class="vote_section-list_tag_streamer">
-                  <div class="vote_section-list_tag_streamer_img">
-                    <img src="./media/MiquelRomeu.jpg" alt="">
-                  </div>
-                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis22</p></div>
-                  <div class="vote_section-list_tag_streamer_plus">
-                    <button><i class="fas fa-plus invert"></i></button>
-                  </div>
-                </div>
-                <!--  -->
+              <div class="vote_section-list_overflow" id="voting_over_5">
+
               </div>
             </div>
           </div>
@@ -282,6 +170,8 @@
             Web design by <a class="foot-developedby_link" target="_blank" href="https://www.mauicreative.co.uk/">Maui Creative</a>. Web developed by <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a> & <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
           </div>
         </div>
+
+        <div id="snackbar">some message</div>
     </footer>
 </body>
 </html>
