add pointer cursor on streamer hover
also small improvements done - query param routing and autorefresh on votes

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <h3 class="common-info_title">Welcome to the Voting Platform!</h3>
                 <p class="common-info_text">The voting system starts with the entry phase, allowing you to put forward your favourite streamers for the dev team to process into voting.</p>
                 <p class="common-info_text">When the voting platform is open you would be able to vote for your favourite streamers and keep track of the leaderboards in the run up to the weekend.</p>
+                <p class="common-info_text" id="number_of_votes_available"></p>
             </div>
             <div class="common-last_winner">
                 <h3 class="common-last_winner_title">Promoted streamer.</h3>
