--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://use.typekit.net/cyz5xbz.css%22%3E%3E" />
+    <link rel="stylesheet" href="https://use.typekit.net/cyz5xbz.css" />
     <link rel="stylesheet" href="./style.css" />
-    <link href="http://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
     <link rel="icon" href="./media/Logotype_SVG.svg">
     <link rel=”mask-icon” href=”./media/Logotype_SVG.svg” color='#000000'>
     <title>Voting Platform | StreamRaids</title>
